* [ImportRuleForm] Fixed side effect with clipping popup menu of DropDown components inside collapsible content - Side effect was caused by applying overflow: hidden CSS rule required for animation

--- a/src/view/Views/Import/components/RulesDialog/RuleForm/ImportRuleForm.scss
+++ b/src/view/Views/Import/components/RulesDialog/RuleForm/ImportRuleForm.scss
@@ -66,10 +66,9 @@
 
   /* Conditions/Actions list container */
   .collapsible-content {
-    display: block;
+    display: none;
     flex: 1 1 auto;
     max-height: 0;
-    overflow: hidden;
     padding: 0;
     border: 0 none;
     border-bottom-left-radius: 5px;
@@ -93,6 +92,7 @@
     }
 
     .collapsible-content {
+      display: block;
       max-height: none;
       margin: 0 1px;
     }
